--- a/tp.html
+++ b/tp.html
@@ -12,29 +12,29 @@
        <div class="image"><img src="photo.PNG" alt="image"></div>
        <div class="contact"><!--pour les contact-->
         <h2>Contact</h2>
-        <p><img src="phone.png" width="16" alt="image" > +223 83 30 96 97</p>
-        <p><img src="email.png" width="16" alt="image"> chaka@gmail.com</p>
-        <p><img src="adresse.png" width="16" alt="image">Bamako</p>
+            <p><img src="phone.png" width="16" alt="image" > +223 83 30 96 97</p>
+            <p><img src="email.png" width="16" alt="image"> chaka@gmail.com</p>
+            <p><img src="adresse.png" width="16" alt="image">Bamako</p>
        </div>
        <div class="reseau"><!--cette div concerne le reseau-->
         <h2>Réseaux</h2>
-        <p><img src="linkeldln.png" width="16" alt="image">diabate</p>
-        <p><img src="insta.png" width="16" alt="image"> chaka</p>
+            <p><img src="linkeldln.png" width="16" alt="image">diabate</p>
+            <p><img src="insta.png" width="16" alt="image"> chaka</p>
        </div>
        <div class="langues"><!--cette div concerne la langues-->
         <h2>Langues</h2>
         <ul>
-        <p><li class="bloc">Français  <progress value="20" max="60"></progress></li></p>
-        <p><li class="bloc">Anglais   <progress value="20" max="50"></progress></li></p>
-        <p><li class="bloc">Bambara   <progress value="20" max="80"></progress></li></p>
+            <li class="bloc">Français  <progress value="20" max="60"></progress></li>
+            <li class="bloc">Anglais   <progress value="20" max="30"></progress></li>
+            <li class="bloc">Bambara   <progress value="20" max="80"></progress></li>
         </ul>
        </div>
        <div class="loisirs"><!--cette div pour loisirs-->
         <h2>Loisirs</h2>
         <ul>
-        <p><li>Lecture</li></p>
-        <p><li>voyage</li></p>
-        <p><li>Pêche</li></p>
+            <li>Lecture</li>
+            <li>voyage</li>
+            <li>Pêche</li>
         </ul>
        </div>
 
@@ -51,31 +51,24 @@
         
             <h2>Expériences Professionnelles</h2>
         <ul>
-            <p><li><strong>Orange-mali</strong><br>
-            Développement de logiciel<br>
-            <strong>Bamako 2022-2023</strong></li></p>
-            <p><li><strong>BICIM</strong><br>
-            Développement de logiciel<br>
-            <strong>Bamako 2021-2022</strong></li></p>
-            <p><li><strong>Malitel</strong><br>
-            Développement de logiciel<br>
-            <strong>Bamako 2020-2021</strong></li></p>
+            <li><p><strong>Orange-mali</strong><br>Développement de logiciel<br><strong>Bamako 2022-2023</strong></p></li>
+            <li><p><strong>BICIM</strong><br>Développement de logiciel<br><strong>Bamako 2021-2022</strong></p></li>
+            <li><p><strong>Malitel</strong><br> Développement de logiciel<br><strong>Bamako 2020-2021</strong></p></li>
         </ul>
         </div>
         <div class="formation"><!--celle-ci pour la formation-->
             <h2>Formation</h2>
         <ul>
-            <p><li><strong>2023:</strong>Faculté des sciences technique de<br>
-            Bamako</li></p>
-            <p><li><strong>2021:</strong>Baccalauréat Malien</li></p>
-            <p><li><strong>2017:</strong>Dplôme d'Etude Fondamentale</li></p>
+            <li><p><strong>2023:</strong>Faculté des sciences technique de<br>Bamako</p></li>
+            <li><p><strong>2021:</strong>Baccalauréat Malien</p></li>
+            <li><p><strong>2017:</strong>Dplôme d'Etude Fondamentale</p></li>
         </ul>
         </div>
         <div class="competence"><!--div pour la partie compétence-->
             <h2>Compétences</h2>
         <ul>
-            <p><li>Les outils bureautiques</li></p>
-            <p><li>HTML, CSS, PHP</li></p>
+            <li><p>Les outils bureautiques</p></li>
+            <li><p>HTML, CSS, PHP</p></li>
         </ul>
         </div>
 
