Ajout du README, les Images, et un modification au niveau du html et css

--- a/tp.html
+++ b/tp.html
@@ -25,7 +25,7 @@
         <h2>Langues</h2>
         <ul>
             <li class="bloc">Français  <progress value="20" max="60"></progress></li>
-            <li class="bloc">Anglais   <progress value="20" max="30"></progress></li>
+            <li class="bloc">Anglais   <progress value="20" max="50"></progress></li>
             <li class="bloc">Bambara   <progress value="20" max="80"></progress></li>
         </ul>
        </div>
@@ -59,7 +59,8 @@
         <div class="formation"><!--celle-ci pour la formation-->
             <h2>Formation</h2>
         <ul>
-            <li><p><strong>2023:</strong>Faculté des sciences technique de<br>Bamako</p></li>
+            <li><p><strong>2023:</strong>Faculté des sciences technique de<br>
+Bamako</p></li>
             <li><p><strong>2021:</strong>Baccalauréat Malien</p></li>
             <li><p><strong>2017:</strong>Dplôme d'Etude Fondamentale</p></li>
         </ul>
