--- a/tp.html
+++ b/tp.html
@@ -59,8 +59,7 @@
         <div class="formation"><!--celle-ci pour la formation-->
             <h2>Formation</h2>
         <ul>
-            <li><p><strong>2023:</strong>Faculté des sciences technique de<br>
-Bamako</p></li>
+            <li><p><strong>2023:</strong>Faculté des sciences technique de<br>Bamako</p></li>
             <li><p><strong>2021:</strong>Baccalauréat Malien</p></li>
             <li><p><strong>2017:</strong>Dplôme d'Etude Fondamentale</p></li>
         </ul>
