Modification d'image, de html et css

--- a/tp.html
+++ b/tp.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page"><!--cette div me permettra de jouer sur ma page-->
     <div class="gauche"><!--cette div concerne la partie-->
-       <div class="image"><img src="photo.PNG" alt="image"></div>
+       <div class="image"><img src="image.PNG" alt="image"></div>
        <div class="contact"><!--pour les contact-->
         <h2>Contact</h2>
             <p><img src="phone.png" width="16" alt="image" > +223 83 30 96 97</p>
